[gd_scene format=3 uid="uid://c8xusq6fq6vrt"]

[ext_resource type="Script" uid="uid://bnt8xncjeyr3p" path="res://scripts/email_level.gd" id="1_0y5w7"]
[ext_resource type="Script" uid="uid://djdvw2k2fnth1" path="res://scripts/emailResource.gd" id="2_ds2mx"]
[ext_resource type="Resource" uid="uid://n1" path="res://data/emails/phishing_bank_01.tres" id="3_hcini"]
[ext_resource type="Resource" path="res://data/emails/phishing_bank_00.tres" id="3_r4fxs"]
[ext_resource type="Resource" uid="uid://p2" path="res://data/emails/phishing_bank_02.tres" id="4_wyplp"]
[ext_resource type="Resource" uid="uid://s3" path="res://data/emails/phishing_bank_03.tres" id="5_x4jmi"]
[ext_resource type="Resource" uid="uid://4" path="res://data/emails/phishing_bank_04.tres" id="6_r4fxs"]
[ext_resource type="Resource" uid="uid://m5" path="res://data/emails/phishing_bank_05.tres" id="7_fc73l"]
[ext_resource type="Resource" uid="uid://i6" path="res://data/emails/phishing_bank_06.tres" id="8_vdrlr"]
[ext_resource type="PackedScene" uid="uid://01i7r32w52s4" path="res://scenes/hub.tscn" id="9_n13x3"]
[ext_resource type="Resource" path="res://data/emails/phishing_bank_07.tres" id="10_fc73l"]
[ext_resource type="Resource" path="res://data/emails/phishing_bank_08.tres" id="11_vdrlr"]
[ext_resource type="Resource" path="res://data/emails/phishing_bank_09.tres" id="12_n13x3"]
[ext_resource type="Resource" path="res://data/emails/phishing_bank_10.tres" id="13_vsuiw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elqb8"]
bg_color = Color(0, 0, 0.8235294, 1)
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sugp2"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0

[node name="Control" type="Control" unique_id=844577808]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0y5w7")
email_list = Array[ExtResource("2_ds2mx")]([ExtResource("3_r4fxs"), ExtResource("3_hcini"), ExtResource("4_wyplp"), ExtResource("5_x4jmi"), ExtResource("6_r4fxs"), ExtResource("7_fc73l"), ExtResource("8_vdrlr"), ExtResource("10_fc73l"), ExtResource("11_vdrlr"), ExtResource("12_n13x3"), ExtResource("13_vsuiw")])

[node name="Background" type="ColorRect" parent="." unique_id=1354162238]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.5647059, 1)

[node name="MainLayout" type="VBoxContainer" parent="Background" unique_id=602356980]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="Background/MainLayout" unique_id=428407387]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_elqb8")

[node name="MarginContainer" type="MarginContainer" parent="Background/MainLayout/Header" unique_id=1880894519]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MainLayout/Header/MarginContainer" unique_id=2085865019]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Background/MainLayout/Header/MarginContainer/HBoxContainer" unique_id=1466756413]
layout_mode = 2
text = "CyberShield Mail"

[node name="Spacer" type="Control" parent="Background/MainLayout/Header/MarginContainer/HBoxContainer" unique_id=626293565]
layout_mode = 2
size_flags_horizontal = 3

[node name="hub" parent="Background/MainLayout/Header/MarginContainer/HBoxContainer" unique_id=1269073093 instance=ExtResource("9_n13x3")]
offset = Vector2(880, -50)
transform = Transform2D(1, 0, 0, 1, 880, -50)

[node name="Body" type="HSplitContainer" parent="Background/MainLayout" unique_id=1661869193]
layout_mode = 2
size_flags_vertical = 3

[node name="MailList" type="ItemList" parent="Background/MainLayout/Body" unique_id=175719187]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="MailViewer" type="PanelContainer" parent="Background/MainLayout/Body" unique_id=19120048]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sugp2")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MainLayout/Body/MailViewer" unique_id=233681076]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SenderLabel" type="Label" parent="Background/MainLayout/Body/MailViewer/VBoxContainer" unique_id=1792293955]
unique_name_in_owner = true
layout_mode = 2
text = "From:\"From: support@bank.com"

[node name="SubjectLabel" type="Label" parent="Background/MainLayout/Body/MailViewer/VBoxContainer" unique_id=307479283]
unique_name_in_owner = true
layout_mode = 2
text = "Subject: Urgent!"

[node name="HSeparator" type="HSeparator" parent="Background/MainLayout/Body/MailViewer/VBoxContainer" unique_id=1311974168]
layout_mode = 2

[node name="BodyLabel" type="RichTextLabel" parent="Background/MainLayout/Body/MailViewer/VBoxContainer" unique_id=1280129145]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="ActionButtons" type="PanelContainer" parent="Background" unique_id=838691889]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -133.0
offset_top = -40.0
offset_right = 133.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Background/ActionButtons" unique_id=1466268496]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Background/ActionButtons/MarginContainer" unique_id=1966157182]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TrustButton" type="Button" parent="Background/ActionButtons/MarginContainer/HBoxContainer" unique_id=415925510]
layout_mode = 2
text = "TRUST MAIL"

[node name="ReportButton" type="Button" parent="Background/ActionButtons/MarginContainer/HBoxContainer" unique_id=1116577777]
layout_mode = 2
text = "REPORT PHISHING"

[connection signal="pressed" from="Background/ActionButtons/MarginContainer/HBoxContainer/TrustButton" to="." method="_on_trust_button_pressed"]
[connection signal="pressed" from="Background/ActionButtons/MarginContainer/HBoxContainer/ReportButton" to="." method="_on_report_button_pressed"]
